--- a/solarsystem.html
+++ b/solarsystem.html
@@ -18,7 +18,7 @@
                 </p>
                 <p><strong><u> Planets in the solar system: </u></strong> </p>
                 <table style="border: 2px solid black">
-                    <tr>
+                    <tr style="background-color:yellow">
                         <th>No. </th>
                         <th>Planet Name </th>
                         <th>Distance from Sun </th>
